--- a/ZooZooZoo/Base.lproj/Main.storyboard
+++ b/ZooZooZoo/Base.lproj/Main.storyboard
@@ -282,6 +282,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="XDP-om-8Wt">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
